--- a/index.html
+++ b/index.html
@@ -11,16 +11,53 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .header {
+            background-color: #ffcc00; /* Yellow */
+            padding: 15px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+        }
+
+        .main-container {
+            display: flex;
+            width: 100%;
+            max-width: 1200px;
+        }
+
+        .sidebar {
+            width: 20%;
+            background-color: #ffa07a; /* Light salmon */
+            padding: 15px;
+            height: 100vh;
+            overflow: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .sidebar div {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #ff7f50; /* Coral */
+            text-align: center;
+            font-weight: bold;
+            width: 100%;
         }
 
         .quiz-container {
-            width: 100%;
-            max-width: calc(100% - 8cm); /* 4cm margin on each side */
+            width: 60%;
             background: white;
             padding: 20px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 2cm 4cm;
+            margin: 20px 0;
         }
 
         .quiz-container h2 {
@@ -77,64 +114,60 @@
     </style>
 </head>
 <body>
-    <div class="quiz-container">
-        <h2>Interactive Quiz</h2>
-        <form id="quizForm">
-            <div id="questions-container">
-                <!-- Questions will be dynamically added here -->
-            </div>
-            <button type="button" onclick="addQuestion('true_false')">Add True/False Question</button>
-            <button type="button" onclick="addQuestion('multiple_choice')">Add Multiple Choice Question</button>
-            <button type="button" onclick="addQuestion('matching')">Add Matching Question</button>
-            <button type="button" onclick="addQuestion('short_answer')">Add Short Answer Question</button>
-            <button type="button" onclick="addQuestion('long_answer')">Add Long Answer Question</button>
-            <button type="button" onclick="addQuestion('ordering')">Add Ordering Question</button>
-            <button type="button" onclick="addQuestion('fill_blank')">Add Fill in the Blank Question</button>
-            <button type="submit">Submit Answers</button>
-        </form>
+    <div class="header">
+        <div>Home</div>
+        <div>About</div>
+        <div>Quiz</div>
+        <div>Contact</div>
+        <div>Help</div>
+    </div>
 
-        <!-- Share Form -->
-        <form id="shareForm" action="send_quiz.php" method="post">
-            <input type="email" name="email" placeholder="Enter recipient email" required>
-            <input type="hidden" name="quiz_url" value="">
-            <button type="submit" class="share-button">Send Quiz</button>
-        </form>
+    <div class="main-container">
+        <div class="sidebar">
+            <div>Section 1</div>
+            <div>Section 2</div>
+            <div>Section 3</div>
+            <div>Section 4</div>
+            <div>Section 5</div>
+            <div>Section 6</div>
+        </div>
+
+        <div class="quiz-container">
+            <h2>Interactive Quiz</h2>
+            <form id="quizForm">
+                <div id="questions-container">
+                    <!-- Questions will be dynamically added here -->
+                </div>
+                <button type="button" onclick="addQuestion('true_false')">Add True/False Question</button>
+                <button type="button" onclick="addQuestion('multiple_choice')">Add Multiple Choice Question</button>
+                <button type="button" onclick="addQuestion('matching')">Add Matching Question</button>
+                <button type="button" onclick="addQuestion('short_answer')">Add Short Answer Question</button>
+                <button type="button" onclick="addQuestion('long_answer')">Add Long Answer Question</button>
+                <button type="button" onclick="addQuestion('ordering')">Add Ordering Question</button>
+                <button type="button" onclick="addQuestion('fill_blank')">Add Fill in the Blank Question</button>
+                <button type="submit">Submit Answers</button>
+            </form>
+
+            <!-- Share Form -->
+            <form id="shareForm" action="send_quiz.php" method="post">
+                <input type="email" name="email" placeholder="Enter recipient email" required>
+                <input type="hidden" name="quiz_url" value="">
+                <button type="submit" class="share-button">Send Quiz</button>
+            </form>
+        </div>
+
+        <div class="sidebar">
+            <div>Section 1</div>
+            <div>Section 2</div>
+            <div>Section 3</div>
+            <div>Section 4</div>
+            <div>Section 5</div>
+            <div>Section 6</div>
+        </div>
     </div>
 
     <script>
         document.querySelector("input[name='quiz_url']").value = window.location.href;
-
-        function addQuestion(type) {
-            let container = document.getElementById('questions-container');
-            let newQuestion = document.createElement('div');
-            newQuestion.classList.add('form-group');
-            
-            let questionHTML = '';
-            if (type === 'true_false') {
-                questionHTML = `<label contenteditable="true">New True/False Question</label>
-                <select><option value="true">True</option><option value="false">False</option></select>`;
-            } else if (type === 'multiple_choice') {
-                questionHTML = `<label contenteditable="true">New Multiple Choice Question</label>
-                <select><option>Option 1</option><option>Option 2</option><option>Option 3</option></select>`;
-            } else if (type === 'matching') {
-                questionHTML = `<label contenteditable="true">New Matching Question</label>
-                <input type="text" placeholder="Item"><select><option>Match 1</option><option>Match 2</option></select>`;
-            } else if (type === 'short_answer') {
-                questionHTML = `<label contenteditable="true">New Short Answer Question</label>
-                <input type="text">`;
-            } else if (type === 'long_answer') {
-                questionHTML = `<label contenteditable="true">New Long Answer Question</label>
-                <textarea rows="4"></textarea>`;
-            } else if (type === 'ordering') {
-                questionHTML = `<label contenteditable="true">New Ordering Question</label>
-                <ol><li><input type="text"></li><li><input type="text"></li></ol>`;
-            } else if (type === 'fill_blank') {
-                questionHTML = `<label contenteditable="true">New Fill in the Blank Question: <input type="text"></label>`;
-            }
-            
-            newQuestion.innerHTML = questionHTML;
-            container.appendChild(newQuestion);
-        }
     </script>
 </body>
 </html>
