--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             </form>
 
             <!-- Share Form -->
-            <form id="shareForm" action="send_quiz.php" method="POST">
+            <form id="shareForm" action="<form id="quizForm" action="test_post.php" method="POST">
+            " method="POST">
                 <label for="class">Select Recipient Class:</label>
                 <select name="class" id="class">
                     <option value="class1">Class 1</option>
