--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <button type="button" onclick="addQuestion('long_answer')">Add Long Answer Question</button>
                 <button type="button" onclick="addQuestion('ordering')">Add Ordering Question</button>
                 <button type="button" onclick="addQuestion('fill_blank')">Add Fill in the Blank Question</button>
-                <button type="submit">Submit Answers</button>
+                <button type="submit" onclick="window.location.href='https://ketabby.github.io/index22.html/#courses'">Submit Answers</button>
             </form>
 
             <!-- Share Form -->
