--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <button type="button" onclick="addQuestion('long_answer')">Add Long Answer Question</button>
                 <button type="button" onclick="addQuestion('ordering')">Add Ordering Question</button>
                 <button type="button" onclick="addQuestion('fill_blank')">Add Fill in the Blank Question</button>
-                <button type="submit" onclick="window.location.href='https://ketabby.github.io/index22.html/#courses'">Submit Answers</button>
+                <button type="submit">Submit Answers</button>
             </form>
 
             <!-- Share Form -->
@@ -184,7 +184,27 @@
         document.querySelector('form#quizForm').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent form submission for demo purposes
             activateLearnerResponses();  // Activate icon when quiz is submitted
-            this.submit();  // Actually submit the form after the icon is activated
+
+            // Submit the form using AJAX to avoid 405 error
+            const form = event.target;
+            const formData = new FormData(form);
+
+            fetch(form.action, {
+                method: form.method,
+                body: formData
+            })
+            .then(response => {
+                if (response.ok) {
+                    // Redirect to the specified URL on success
+                    window.location.href = 'https://ketabby.github.io/index22.html/#courses';
+                } else {
+                    alert('There was a problem submitting the quiz.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was a problem submitting the quiz.');
+            });
         });
 
         function addQuestion(type) {
