--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </form>
 
             <!-- Share Form -->
-            <form id="shareForm" action="https://www.classmarker.com/a/assign/groups/?test_id=665908" method="POST">
+            <form id="shareForm" action="https://ketabby.github.io/index22.html/" method="POST">  <!-- Update this line -->
                 <label for="class">Select Recipient Class:</label>
                 <select name="class" id="class">
                     <option value="class1">Class 1</option>
@@ -195,7 +195,7 @@
             
             let questionHTML = '';
             if (type === 'true_false') {
-                questionHTML = `
+                questionHTML = ` 
                     <label>New True/False Question</label>
                     <input type="text" value="True/False Question" class="editable-question">
                     <select>
